fix: 修复 Drone 中的 secret 密钥错误

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ name: default
 
 environment:
   DOCKER_PASS:
-    from_secret: DOCKER_PASS
+    from_secret: DOCKER_PASSWORD
 
 volumes:
   - name: dockersock
