fix: 现在会为 build.sh 添加执行权限

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,4 +19,5 @@ steps:
       - name: dockersock
         path: /var/run/docker.sock
     commands:
+      - "chmod +x ./build.sh"
       - "./build.sh"
