--- a/.drone.yml
+++ b/.drone.yml
@@ -19,5 +19,5 @@ steps:
       - name: dockersock
         path: /var/run/docker.sock
     commands:
-      - "chmod +x ./build.sh"
-      - "./build.sh"
+      - "chmod +x /source/build.sh"
+      - "/source/build.sh"
