Revert "fix: 使用完整路径"
This reverts commit c72e484a5aedad5f519230427fa6e9d2c12e6407.

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,5 +19,5 @@ steps:
       - name: dockersock
         path: /var/run/docker.sock
     commands:
-      - "chmod +x /source/build.sh"
-      - "/source/build.sh"
+      - "chmod +x ./build.sh"
+      - "./build.sh"
