fix: 现在推送说明文本的 CI/CD 步骤可以正确读取 DOCKER_PASS

--- a/.drone.yml
+++ b/.drone.yml
@@ -29,6 +29,6 @@ steps:
       PUSHRM_TARGET: docker.io/paperplanecc/baseline-node20
       DOCKER_USER: paperplanecc
       DOCKER_PASS:
-        from_secret: DOCKER_PASS
+        from_secret: DOCKER_PASSWORD
     commands:
       - /docker-pushrm
